[gd_scene load_steps=2 format=3 uid="uid://14bynejisexy"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_b3xb5"]

[node name="Menu" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -107.0
offset_right = 127.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3xb5")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "SpawnerSyncerSandbox"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Host"

[node name="MaxPlayers" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MaxPlayers"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Players"

[node name="MaxPlayersField" type="SpinBox" parent="MaxPlayers"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 4096.0
value = 4.0

[node name="HostButton" type="Button" parent="."]
layout_mode = 2
text = "Host"

[node name="HeadlessButton" type="Button" parent="."]
layout_mode = 2
text = "Headless"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label3" type="Label" parent="."]
layout_mode = 2
text = "Connect"

[node name="Address" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Address"]
layout_mode = 2
size_flags_horizontal = 3
text = "Address"

[node name="AddressField" type="LineEdit" parent="Address"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Address"

[node name="ConnectButton" type="Button" parent="."]
layout_mode = 2
text = "Connect"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="Port" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Port"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port"

[node name="PortField" type="SpinBox" parent="Port"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 65535.0
value = 9001.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
